# cookiecutter-relecloud

./: .gitignore  CONTRIBUTING.MD  README.md  cookiecutter.json  extensions.py  requirements.in  requirements.txt  update_readme.py
._for_reference/django/lab/: 02-examining-project.md  README.md
._for_reference/fastapi/: README.md
._for_reference/fastapi/lab/: 02-examining-project.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: test.yml  test_database.yml
diff/: diff.py
hooks/: linters.py  movers.py  post_gen_project.py  pre_gen_project.py
templates/: abbreviations.txt  conftest_flask_mongodb.py  conftest_flask_postgres.py  docker_compose_mongodb.yml  docker_compose_postgres.yml  entrypoint_macros.sh  pages_macros.py  web_macros.bicep
tests/: _test_cookiecutter_generation_with_deploy.py  conftest.py  test_cookiecutter_generation.py
tools/: update_info.py
{{cookiecutter.__src_folder_name}}/: .abbreviations.txt  .gitignore  .markdownlint.json  Dockerfile  README.md  azure.yaml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
{{cookiecutter.__src_folder_name}}/.devcontainer/: Dockerfile_dev  devcontainer.json  docker-compose_dev.yml
{{cookiecutter.__src_folder_name}}/.github/workflows/: azure-dev.yml  cruft.yml  (+3 more)
{{cookiecutter.__src_folder_name}}/fastapi/: gunicorn.conf.py
{{cookiecutter.__src_folder_name}}/infra/: aca.bicep  appservice.bicep  db.bicep  main.bicep  main.parameters.json  web.bicep
{{cookiecutter.__src_folder_name}}/root/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in
{{cookiecutter.__src_folder_name}}/src/: Dockerfile  entrypoint.sh  requirements.txt  seed_data.json
{{cookiecutter.__src_folder_name}}/src/fastapi/: pyproject.toml
{{cookiecutter.__src_folder_name}}/src/fastapi/fastapi_app/: __init__.py  app.py  models.py
{{cookiecutter.__src_folder_name}}/src/flask/: pyproject.toml
{{cookiecutter.__src_folder_name}}/src/flask/flaskapp/: __init__.py  models.py  mongo_seeder.py  pages.py  postgres_seeder.py
{{cookiecutter.__src_folder_name}}/src/flask/flaskapp/config/: development.py  production.py
{{cookiecutter.__src_folder_name}}/src/flask/flaskapp/migrations/: env.py
{{cookiecutter.__src_folder_name}}/templates/: about.html  base.html  cruise_detail.html  destination_detail.html  destinations.html  info_request_create.html
{{cookiecutter.__src_folder_name}}/tests/: conftest.py  playwright.py  test_playwright.py  tests.py
{{cookiecutter.project_slug}}/: azure.yaml  entrypoint.sh  requirements.in  requirements.txt
{{cookiecutter.project_slug}}/infra/: main.bicep  main.parameters.json  web.bicep
{{cookiecutter.project_slug}}/root/: azure.yaml  docker-compose.yml  pyproject.toml  requirements-dev.in
{{cookiecutter.project_slug}}/templates/: base.html  destination_detail.html  destinations.html  index.html  info_request_create.html
(+47 files in other folders)
