[project]
name = "flaskapp"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "Flask==2.3.2",
    {% if use_opencensus%}
    "opencensus-ext-azure==1.1.9",
    "opencensus-ext-flask==0.8.2",
    {% endif %}
    {% if 'postgres' in cookiecutter.db_resource %}
    "SQLAlchemy==2.0.17",
    "psycopg2-binary==2.9.6",
    "Flask-Migrate==4.0.4",
    "Flask-SQLAlchemy==3.0.5",
    {% endif %}
    {% if 'mongodb' in cookiecutter.db_resource %}
    "mongoengine==0.27.0",
    {% endif %}
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"