[project]
name = "flaskapp"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "Flask==2.3.2",
    {# Add Open Telemetry Dependencies #}
    {% if 'postgres' in cookiecutter.db_resource %}
    "SQLAlchemy==2.0.17",
    "psycopg2-binary==2.9.6",
    "Flask-Migrate==4.0.4",
    "Flask-SQLAlchemy==3.1.1",
    {% endif %}
    {% if 'mongodb' in cookiecutter.db_resource %}
    "mongoengine==0.27.0",
    {% endif %}
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
